--- a/apps/js-examples/.env.example
+++ b/apps/js-examples/.env.example
@@ -8,7 +8,7 @@
 # https://www.prisma.io/docs/reference/database-reference/connection-urls#env
 DATABASE_URL="postgresql://user:pass@localhost:5432/js_examples"
 
-# Replace with your client ID from https://builder.fdai.earth/app/public/#/app/configuration
-FDAI_CLIENT_ID="oauth_test_client"
-# Replace with your client secret from https://builder.fdai.earth/app/public/#/app/configuration
-FDAI_CLIENT_SECRET="oauth_test_secret"
+# Replace with your client ID from https://builder.dfda.earth/app/public/#/app/configuration
+DFDA_CLIENT_ID="oauth_test_client"
+# Replace with your client secret from https://builder.dfda.earth/app/public/#/app/configuration
+DFDA_CLIENT_SECRET="oauth_test_secret"
