--- a/libs/dfda-auth/project.json
+++ b/libs/dfda-auth/project.json
@@ -1,31 +1,31 @@
 {
-  "name": "fdai-auth",
+  "name": "dfda-auth",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "libs/fdai-auth/src",
+  "sourceRoot": "libs/dfda-auth/src",
   "projectType": "library",
   "targets": {
     "build": {
       "executor": "@nrwl/js:tsc",
       "outputs": ["{options.outputPath}"],
       "options": {
-        "outputPath": "dist/libs/fdai-auth",
-        "main": "libs/fdai-auth/src/index.ts",
-        "tsConfig": "libs/fdai-auth/tsconfig.lib.json",
-        "assets": ["libs/fdai-auth/*.md"]
+        "outputPath": "dist/libs/dfda-auth",
+        "main": "libs/dfda-auth/src/index.ts",
+        "tsConfig": "libs/dfda-auth/tsconfig.lib.json",
+        "assets": ["libs/dfda-auth/*.md"]
       }
     },
     "lint": {
       "executor": "@nrwl/linter:eslint",
       "outputs": ["{options.outputFile}"],
       "options": {
-        "lintFilePatterns": ["libs/fdai-auth/**/*.ts"]
+        "lintFilePatterns": ["libs/dfda-auth/**/*.ts"]
       }
     },
     "test": {
       "executor": "@nrwl/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "libs/fdai-auth/jest.config.ts",
+        "jestConfig": "libs/dfda-auth/jest.config.ts",
         "passWithNoTests": true
       },
       "configurations": {
