--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,7 +16,7 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@dfda/fdai-auth": ["libs/fdai-auth/src/index.ts"]
+      "@dfda/dfda-auth": ["libs/dfda-auth/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
