Added variable search

--- a/apps/nextjs/.env.example
+++ b/apps/nextjs/.env.example
@@ -28,6 +28,6 @@ DATABASE_URL="postgresql://user:pass@localhost:5432/fdai_test?schema=public"
 OPENAI_API_KEY=
 OPENAI_MODEL=
 
-# Get your client ID/secret from https://builder.fdai.earth/app/public/#/app/configuration
-FDAI_CLIENT_ID=
-FDAI_CLIENT_SECRET=
+# Get your client ID/secret from https://builder.dfda.earth/app/public/#/app/configuration
+DFDA_CLIENT_ID=
+DFDA_CLIENT_SECRET=
