Add copilotkit into layout
Copilot components have been added into the layout file. Meanwhile, some key dependencies related to copilot, langchain, and anthropic-ai have been added or modified in the yarn.lock file, ensuring proper functionality and compatibility.

--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -21,6 +21,9 @@
     "generate:rapini": "npx rapini react-query -p ../../docs/api-reference/openapi.yml"
   },
   "dependencies": {
+    "@copilotkit/backend": "^0.8.0",
+    "@copilotkit/react-core": "^0.24.0",
+    "@copilotkit/react-ui": "^0.21.0",
     "@hookform/resolvers": "^3.3.4",
     "@mdx-js/loader": "^3.0.1",
     "@mdx-js/react": "^3.0.1",
