--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -21,6 +21,7 @@
     "generate:rapini": "npx rapini react-query -p ../../docs/api-reference/openapi.yml"
   },
   "dependencies": {
+    "ai": "^2.2.26",
     "@copilotkit/backend": "^0.8.0",
     "@copilotkit/react-core": "^0.24.0",
     "@copilotkit/react-ui": "^0.21.0",
@@ -96,6 +97,7 @@
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.3.3",
     "typewriter-effect": "^2.20.1",
+    "typechat": "^0.0.10",
     "vaul": "^0.9.0",
     "zod": "^3.22.4",
     "zustand": "^4.3.9"
