--- a/apps/nextjs/tsconfig.json
+++ b/apps/nextjs/tsconfig.json
@@ -21,9 +21,14 @@
     ],
     "paths": {
       "@/*": ["./*"]
-    },
-    "types": ["node", "jest", "@testing-library/jest-dom"]
+    }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "trigger.config.ts"
+  ],
   "exclude": ["node_modules"]
 }
