--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -69,6 +69,8 @@
     "gray-matter": "^4.0.3",
     "highcharts": "^11.4.1",
     "highcharts-react-official": "^3.2.1",
+    "just-template": "^2.2.0",
+    "lottie-react": "^2.4.0",
     "lucide-react": "^0.259.0",
     "next": "14.1.0",
     "next-auth": "^4.24.5",
@@ -91,7 +93,10 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-markdown": "^8.0.7",
+    "react-speech-kit": "^3.0.1",
+    "react-speech-recognition": "^3.10.0",
     "recharts": "^2.12.0",
+    "regenerator-runtime": "^0.13.11",
     "remark": "^15.0.1",
     "remark-html": "^16.0.1",
     "replicate": "^0.12.3",
@@ -115,6 +120,8 @@
     "@types/jest": "^29.5.12",
     "@types/react": "18.2.55",
     "@types/react-calendar-heatmap": "^1.6.7",
+    "@types/react-speech-recognition": "^3.9.1",
+    "@types/regenerator-runtime": "^0.13.1",
     "eslint": "8.56.0",
     "eslint-config-next": "14.1.0",
     "jest": "^29.7.0",
